Add asm dependency.

--- a/injector/pom.xml
+++ b/injector/pom.xml
@@ -13,6 +13,13 @@
 
   <name>Anvil: Injector</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-debug-all</artifactId>
+    </dependency>
+  </dependencies>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
