--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
         <artifactId>slf4j-jdk14</artifactId>
         <version>1.7.12</version>
       </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-debug-all</artifactId>
+        <version>5.0.4</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
