--- a/example-client-mod/pom.xml
+++ b/example-client-mod/pom.xml
@@ -8,23 +8,18 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>api-client</artifactId>
+  <artifactId>example-client-mod</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>Anvil: API Client</name>
+  <name>Anvil: Example Client Mod</name>
 
   <dependencies>
-    <dependency>
-      <groupId>com.wyverngame.anvil</groupId>
-      <artifactId>api-common</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>com.wurmonline</groupId>
       <artifactId>client</artifactId>
       <version>828552</version>
       <scope>system</scope>
-      <systemPath>${project.basedir}/lib/client.jar</systemPath>
+      <systemPath>${project.basedir}/../api-client/lib/client.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>com.wurmonline</groupId>
