--- a/patcher-client/pom.xml
+++ b/patcher-client/pom.xml
@@ -8,10 +8,26 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>api-common</artifactId>
+  <artifactId>patcher-client</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>Anvil: API Common</name>
+  <name>Anvil: Client Patcher</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>com.wyverngame.anvil</groupId>
+      <artifactId>patcher-common</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-debug-all</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+  </dependencies>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
