--- a/api-server/pom.xml
+++ b/api-server/pom.xml
@@ -24,7 +24,7 @@
       <artifactId>server</artifactId>
       <version>828552</version>
       <scope>system</scope>
-      <systemPath>${project.basedir}/lib/server.jar</systemPath>
+      <systemPath>${project.basedir}/../wurm/server/server.jar</systemPath>
     </dependency>
   </dependencies>
 
