--- a/api-common/pom.xml
+++ b/api-common/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.wurmonline</groupId>
       <artifactId>common</artifactId>
-      <version>828552</version>
+      <version>LATEST</version>
       <scope>system</scope>
       <systemPath>${project.basedir}/../wurm/server/common.jar</systemPath>
     </dependency>
