--- a/api-server/pom.xml
+++ b/api-server/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.wurmonline</groupId>
       <artifactId>server</artifactId>
-      <version>828552</version>
+      <version>LATEST</version>
       <scope>system</scope>
       <systemPath>${project.basedir}/../wurm/server/server.jar</systemPath>
     </dependency>
