--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>api-common</module>
     <module>api-server</module>
     <module>example-client-mod</module>
+    <module>example-server-mod</module>
     <module>injector</module>
   </modules>
 
@@ -103,6 +104,11 @@
             <source>1.8</source>
             <target>1.8</target>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.5.3</version>
         </plugin>
       </plugins>
     </pluginManagement>
