--- a/injector/pom.xml
+++ b/injector/pom.xml
@@ -18,6 +18,16 @@
       <groupId>org.ow2.asm</groupId>
       <artifactId>asm-debug-all</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.wyverngame.anvil</groupId>
+      <artifactId>api-client</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.wyverngame.anvil</groupId>
+      <artifactId>api-server</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <properties>
