--- a/api-server/pom.xml
+++ b/api-server/pom.xml
@@ -24,7 +24,7 @@
       <artifactId>server</artifactId>
       <version>LATEST</version>
       <scope>system</scope>
-      <systemPath>${project.basedir}/../server-patched.jar</systemPath>
+      <systemPath>${project.basedir}/../server-public.jar</systemPath>
     </dependency>
   </dependencies>
 
